# data-standards

./: .gitignore  ChangeLog.md  README.md  data-standards.cabal  other  raw
Data/Standards/ISO/Country/: Primary.hs
Data/Standards/ISO/Country/Primary/: Alpha2.hs  Alpha3.hs  Common.hs  Numeric.hs  Translation.hs  Types.hs
src/Data/Standards/ISO/Country/: Primary.hs
src/Data/Standards/ISO/Country/Primary/: Alpha2.hs  Alpha3.hs  Common.hs  Numeric.hs  Translation.hs
tests/Data/Standards/ISO/Country/Primary/Alpha2/: Tests.hs
tests/Data/Standards/ISO/Country/Primary/Alpha2/Tests/: Properties.hs  SmallCheck.hs
tests/Data/Standards/ISO/Country/Primary/Alpha3/: Tests.hs
tests/Data/Standards/ISO/Country/Primary/Alpha3/Tests/: Properties.hs  SmallCheck.hs
tests/Data/Standards/ISO/Country/Primary/Numeric/: Tests.hs
tests/Data/Standards/ISO/Country/Primary/Numeric/Tests/: Properties.hs  SmallCheck.hs
tests/Data/Standards/ISO/Country/Primary/Translation/: Tests.hs
tests/Data/Standards/ISO/Country/Primary/Translation/Tests/: Properties.hs  SmallCheck.hs  Tasty.hs
tests/Data/Standards/Tests/Properties/: Main.hs
