name:               data-standards
author:             Samuel May
category:           Data
synopsis:           A collection of standards representable by simple data types.

version:            0.1.1.0
stability:          provisional
maintainer:         ag.eitilt@gmail.com

copyright:          (c) 2018 Samuel May
license:            MPL-2.0
license-file:       LICENSE
extra-source-files: ChangeLog.md
                  , README.md

homepage:           https://github.com/ag-eitilt/data-standards
bug-reports:        https://github.com/ag-eitilt/data-standards/issues

description:        Type-safe representations of the country codes described by
                    the ISO 3166-1 specification.

cabal-version:      >=1.10
build-type:         Simple
tested-with:        GHC ==8.0.2, GHC ==8.4.3

source-repository head
  type:             git
  location:         git://github.com/ag-eitilt/data-standards.git

source-repository this
  type:             git
  location:         git://github.com/ag-eitilt/data-standards.git
  tag:              v0.1.1.0

flag test-properties
    description:    Expose low-level interfaces for property-based testing.
                    
                    Note that, since these are the only tests as yet written,
                    this flag needs to be enabled for /any/ tests to be built.
    default:        False
    manual:         True

library
  exposed-modules:  Data.Standards.ISO.Country.Primary
                  , Data.Standards.ISO.Country.Primary.Alpha2
                  , Data.Standards.ISO.Country.Primary.Alpha3
                  , Data.Standards.ISO.Country.Primary.Numeric
                  , Data.Standards.ISO.Country.Primary.Translation
  other-modules:    Data.Standards.ISO.Country.Primary.Types
  build-depends:    base >=4.9 && <4.12
                  , hashable >=1.2 && <1.3
                  , text <1.3
                  , unordered-containers <0.3
  default-language: Haskell98
  other-extensions: CPP
  if flag(test-properties)
    cpp-options:    -DTEST_PROPERTIES

test-suite properties
  if !flag(test-properties)
    buildable:      False
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Data/Standards/Tests/Properties/Main.hs
  other-modules:    Data.Standards.ISO.Country.Primary.Alpha2.Tests.SmallCheck
                  , Data.Standards.ISO.Country.Primary.Alpha3.Tests.SmallCheck
                  , Data.Standards.ISO.Country.Primary.Numeric.Tests.SmallCheck
                  , Data.Standards.ISO.Country.Primary.Translation.Tests.SmallCheck
                  , Data.Standards.ISO.Country.Primary.Translation.Tests.Tasty
  build-depends:    data-standards
                  , base
                  , smallcheck >=1.0 && <1.2
                  , tasty
                  , tasty-smallcheck
  default-language: Haskell2010
  other-extensions: DeriveGeneric
                  , FlexibleInstances
                  , MultiParamTypeClasses
                  , StandaloneDeriving
  ghc-options:      -Wall -Wcompat
